# Tsubasa-

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: TSUBASA_MANIFESTO.md
docs/components/: badges.md  button.md  modal.md  progress-bar.md  sidebar.md  table.md  toast.md
docs/design/: color-system.md  design-system.md  motion-system.md  spacing.md  theme-system.md  typography.md
docs/layout/: dashboard-layout.md  onboarding-flow.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs  retry.rs
src-tauri/src/bandwidth/: mod.rs
src-tauri/src/cloud/: download_driver.rs  mod.rs  provider.rs  realdebrid.rs  torbox.rs
src-tauri/src/commands/: cloud.rs  mod.rs  queue.rs  search.rs  search_aggregator.rs  settings.rs  settings_v2.rs  speed_graph.rs  system.rs  torrent.rs
src-tauri/src/connection/: manager.rs  mod.rs  proxy.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/download/: mod.rs  orchestrator.rs  state_machine.rs
src-tauri/src/engine/: mod.rs  torrent_engine.rs
src-tauri/src/events/: mod.rs
src-tauri/src/ip_filter/: blocklist.rs  filter.rs  mod.rs
src-tauri/src/logging/: mod.rs  ring_buffer.rs
src-tauri/src/queue/: manager.rs  mod.rs
src-tauri/src/search/: aggregator.rs  mod.rs  plugin.rs
src-tauri/src/search/plugins/: leet.rs  mod.rs  nyaa.rs  piratebay.rs  torrentgalaxy.rs  yts.rs
src-tauri/src/seeding/: mod.rs  rules.rs
src-tauri/src/settings/: mod.rs  schema.rs
src-tauri/src/speed_graph/: collector.rs  mod.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs  session.rs
src-tauri/src/tracker/: auto_append.rs  manager.rs  mod.rs
src-tauri/src/updater/: mod.rs
src/components/: AggregatorPanel.tsx  CommandPalette.css  CommandPalette.tsx  DetailPanel.tsx  Onboarding.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx  SpeedGraph.tsx  (+8 more)
(+14 files in other folders)
